Made the website responsive with flex and grid, it looks much better and the spacing is fixed. I am pushing the final product that is to be combined with the rest of the pages into our final parallax.

--- a/contact.css
+++ b/contact.css
@@ -28,20 +28,13 @@
 }
 .gtable {
 	align-content: center;
+	justify-content: center;
 	display: flex;
-	margin: auto;
-	float:right;
-}
-table.text {
-	margin: auto;
-	margin-top: 25%;
-	justify-content: space-between;
-}
-th {
-	padding-right: 7%;
-}
-tr {
-	margin-top: 7%;
+	flex-direction: column;
+	align-items: center;
+	word-wrap: break-word;
+	font-size: 20px;
+	height: 100%;
 }
 
 /*Map Styling*/
@@ -64,7 +57,6 @@ fieldset {
 
 legend {
 	text-align: center;
-	font-size: 2.5vw;
 	padding-left: 3%;
 	padding-right: 3%;
 }
@@ -165,4 +157,9 @@ label.inp {
     .forum {
         grid-template-columns: repeat(2, 1fr);
     }
+}
+
+
+#test {
+	word-wrap: break-word;
 }
